api, daemon: Add new endpoint batch delete request
[ upstream commit a0ba133add3a21fa8ffc59f8695725b26ed28379 ]

[ backporter's note: merge conflict in REST API handler registration in
  daemon/cmd due to refactoring in upstream commit
  cf60337aef314960b5db049a208f55a2b3f1d76b which is not part of v1.14
  or v1.14-ce, also see failed backporting attempt at
  https://github.com/isovalent/cilium/pull/1589. Resolved by using the
  "old" way of registering REST API handlers. ]

This commit adds and implements a new endpoint batch deletion request.
This allows the deletion of all endpoints associated with a particular
containerID, which simplifies the CNI DEL logic for the CNI plugin if
more than one endpoint are attached to a particular container.
