# daemon/cmd/endpoint.go
@@ -132,6 +132,36 @@ func (d *Daemon) getEndpointList(params GetEndpointParams) []*models.Endpoint {
 	return resEPs
 }
 
+type deleteEndpoint struct {
+	daemon *Daemon
+}
+
+func NewDeleteEndpointHandler(d *Daemon) DeleteEndpointHandler {
+	return &deleteEndpoint{daemon: d}
+}
+
+func (h *deleteEndpoint) Handle(params DeleteEndpointParams) middleware.Responder {
+	log.WithField(logfields.Params, logfields.Repr(params)).Debug("DELETE /endpoint/ request")
+
+	r, err := h.daemon.apiLimiterSet.Wait(params.HTTPRequest.Context(), apiRequestEndpointDelete)
+	if err != nil {
+		return api.Error(http.StatusTooManyRequests, err)
+	}
+	defer r.Done()
+
+	if nerr, err := h.daemon.deleteEndpointByContainerID(params.Endpoint.ContainerID); err != nil {
+		r.Error(err)
+		if apierr, ok := err.(*api.APIError); ok {
+			return apierr
+		}
+		return api.Error(DeleteEndpointInvalidCode, err)
+	} else if nerr > 0 {
+		return NewDeleteEndpointErrors().WithPayload(int64(nerr))
+	} else {
+		return NewDeleteEndpointOK()
+	}
+}
+
 type getEndpointID struct {
 	d *Daemon
 }
@@ -747,6 +777,37 @@ func (d *Daemon) DeleteEndpoint(id string) (int, error) {
 		}
 		return d.deleteEndpoint(ep), nil
 	}
+}
+
+func (d *Daemon) deleteEndpointByContainerID(containerID string) (nErrors int, err error) {
+	if containerID == "" {
+		return 0, api.New(DeleteEndpointInvalidCode, "invalid container id")
+	}
+
+	eps := d.endpointManager.GetEndpointsByContainerID(containerID)
+	if len(eps) == 0 {
+		return 0, api.New(DeleteEndpointNotFoundCode, "endpoints not found")
+	}
+
+	for _, ep := range eps {
+		scopedLog := log.WithFields(logrus.Fields{
+			logfields.ContainerID:  containerID,
+			logfields.EndpointID:   ep.ID,
+			logfields.K8sPodName:   ep.GetK8sPodName(),
+			logfields.K8sNamespace: ep.GetK8sNamespace(),
+		})
+
+		if err = endpoint.APICanModify(ep); err != nil {
+			scopedLog.WithError(err).Warn("Skipped endpoint in batch delete request")
+			nErrors++
+			continue
+		}
+
+		scopedLog.Info("Delete endpoint by containerID request")
+		nErrors += d.deleteEndpoint(ep)
+	}
+
+	return nErrors, nil
 }
 
 // EndpointDeleted is a callback to satisfy EndpointManager.Subscriber,
